# rmqcpp

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  amqpprox.Dockerfile  start_broker.sh  start_proxy.sh  vcpkg.json
examples/rmqperftest/: CMakeLists.txt  rmqperftest.m.cpp  rmqperftest_args.cpp  rmqperftest_args.h  rmqperftest_consumerargs.cpp  rmqperftest_consumerargs.h  rmqperftest_runner.cpp  rmqperftest_runner.h
src/: CMakeLists.txt
src/rmq/: CMakeLists.txt  Config.cmake.in
src/rmq/rmqa/: CMakeLists.txt  rmqa_compressiontransformer.cpp  rmqa_compressiontransformer.h  rmqa_compressiontransformerimpl.cpp  rmqa_compressiontransformerimpl.h  rmqa_connectionimpl.cpp  rmqa_connectionimpl.h  rmqa_connectionmonitor.cpp  rmqa_connectionmonitor.h  rmqa_connectionstring.cpp  rmqa_connectionstring.h  rmqa_consumer.cpp  rmqa_consumer.h  rmqa_consumerimpl.cpp  rmqa_consumerimpl.h  rmqa_messageguard.cpp  rmqa_messageguard.h  rmqa_noopmetricpublisher.cpp  rmqa_noopmetricpublisher.h  rmqa_producer.cpp  rmqa_producer.h  rmqa_producerimpl.cpp  rmqa_producerimpl.h  rmqa_rabbitcontext.cpp  rmqa_rabbitcontext.h  rmqa_rabbitcontextimpl.cpp  rmqa_rabbitcontextimpl.h  rmqa_rabbitcontextoptions.cpp  rmqa_rabbitcontextoptions.h  rmqa_topology.cpp  rmqa_topology.h  rmqa_topologyupdate.cpp  rmqa_topologyupdate.h  rmqa_tracingconsumerimpl.cpp  rmqa_tracingconsumerimpl.h  rmqa_tracingmessageguard.cpp  rmqa_tracingmessageguard.h  rmqa_tracingproducerimpl.cpp  rmqa_tracingproducerimpl.h  rmqa_vhost.cpp  (+3 more)
src/rmq/rmqamqp/: CMakeLists.txt  rmqamqp_channel.cpp  rmqamqp_channel.h  rmqamqp_channelcontainer.cpp  rmqamqp_channelcontainer.h  rmqamqp_channelfactory.cpp  rmqamqp_channelfactory.h  rmqamqp_channelmap.cpp  rmqamqp_channelmap.h  rmqamqp_connection.cpp  rmqamqp_connection.h  rmqamqp_connectionmonitor.cpp  rmqamqp_connectionmonitor.h  rmqamqp_consumer.cpp  rmqamqp_consumer.h  rmqamqp_contentmaker.cpp  rmqamqp_contentmaker.h  rmqamqp_framer.cpp  rmqamqp_framer.h  rmqamqp_heartbeatmanager.cpp  rmqamqp_heartbeatmanager.h  rmqamqp_heartbeatmanagerimpl.cpp  rmqamqp_heartbeatmanagerimpl.h  rmqamqp_message.cpp  rmqamqp_message.h  rmqamqp_messagestore.cpp  rmqamqp_messagestore.h  rmqamqp_messagewithroute.cpp  rmqamqp_messagewithroute.h  rmqamqp_metrics.cpp  rmqamqp_metrics.h  rmqamqp_multipleackhandler.cpp  rmqamqp_multipleackhandler.h  rmqamqp_receivechannel.cpp  rmqamqp_receivechannel.h  rmqamqp_sendchannel.cpp  rmqamqp_sendchannel.h  rmqamqp_topologymerger.cpp  rmqamqp_topologymerger.h  rmqamqp_topologytransformer.cpp  (+1 more)
src/rmq/rmqamqpt/: CMakeLists.txt  rmqamqpt_basicack.cpp  rmqamqpt_basicack.h  rmqamqpt_basiccancel.cpp  rmqamqpt_basiccancel.h  rmqamqpt_basiccancelok.cpp  rmqamqpt_basiccancelok.h  rmqamqpt_basicconsume.cpp  rmqamqpt_basicconsume.h  rmqamqpt_basicconsumeok.cpp  rmqamqpt_basicconsumeok.h  rmqamqpt_basicdeliver.cpp  rmqamqpt_basicdeliver.h  rmqamqpt_basicmethod.cpp  rmqamqpt_basicmethod.h  rmqamqpt_basicnack.cpp  rmqamqpt_basicnack.h  rmqamqpt_basicproperties.cpp  rmqamqpt_basicproperties.h  rmqamqpt_basicpublish.cpp  rmqamqpt_basicpublish.h  rmqamqpt_basicqos.cpp  rmqamqpt_basicqos.h  rmqamqpt_basicqosok.cpp  rmqamqpt_basicqosok.h  rmqamqpt_basicreturn.cpp  rmqamqpt_basicreturn.h  rmqamqpt_buffer.cpp  rmqamqpt_buffer.h  rmqamqpt_channelclose.cpp  rmqamqpt_channelclose.h  rmqamqpt_channelcloseok.cpp  rmqamqpt_channelcloseok.h  rmqamqpt_channelflow.cpp  rmqamqpt_channelflow.h  rmqamqpt_channelflowok.cpp  rmqamqpt_channelflowok.h  rmqamqpt_channelmethod.cpp  rmqamqpt_channelmethod.h  rmqamqpt_channelopen.cpp  (+72 more)
src/rmq/rmqio/: CMakeLists.txt  rmqio_asioconnection.cpp  rmqio_asioconnection.h  rmqio_asioeventloop.cpp  rmqio_asioeventloop.h  rmqio_asioresolver.cpp  rmqio_asioresolver.h  rmqio_asiosocketwrapper.h  rmqio_asiotimer.cpp  rmqio_asiotimer.h  rmqio_backofflevelretrystrategy.cpp  rmqio_backofflevelretrystrategy.h  rmqio_connection.cpp  rmqio_connection.h  rmqio_connectionretryhandler.cpp  rmqio_connectionretryhandler.h  rmqio_decoder.cpp  rmqio_decoder.h  rmqio_eventloop.cpp  rmqio_eventloop.h  rmqio_resolver.cpp  rmqio_resolver.h  rmqio_retryhandler.cpp  rmqio_retryhandler.h  rmqio_retrystrategy.cpp  rmqio_retrystrategy.h  rmqio_serializedframe.cpp  rmqio_serializedframe.h  rmqio_task.cpp  rmqio_task.h  rmqio_timer.cpp  rmqio_timer.h  rmqio_watchdog.cpp  rmqio_watchdog.h
src/rmq/rmqp/: CMakeLists.txt  rmqp_connection.cpp  rmqp_connection.h  rmqp_consumer.cpp  rmqp_consumer.h  rmqp_consumertracing.cpp  rmqp_consumertracing.h  rmqp_messageguard.cpp  rmqp_messageguard.h  rmqp_messagetransformer.cpp  rmqp_messagetransformer.h  rmqp_metricpublisher.cpp  rmqp_metricpublisher.h  rmqp_producer.cpp  rmqp_producer.h  rmqp_producertracing.cpp  rmqp_producertracing.h  rmqp_rabbitcontext.cpp  rmqp_rabbitcontext.h  rmqp_topology.cpp  rmqp_topology.h  rmqp_topologyupdate.cpp  rmqp_topologyupdate.h
src/rmq/rmqt/: CMakeLists.txt  rmqt_binding.cpp  rmqt_binding.h  rmqt_confirmresponse.cpp  rmqt_confirmresponse.h  rmqt_consumerack.cpp  rmqt_consumerack.h  rmqt_consumerackbatch.cpp  rmqt_consumerackbatch.h  rmqt_consumerconfig.cpp  rmqt_consumerconfig.h  rmqt_credentials.cpp  rmqt_credentials.h  rmqt_endpoint.cpp  rmqt_endpoint.h  rmqt_envelope.cpp  rmqt_envelope.h  rmqt_exchange.cpp  rmqt_exchange.h  rmqt_exchangebinding.cpp  rmqt_exchangebinding.h  rmqt_exchangetype.cpp  rmqt_exchangetype.h  rmqt_fieldvalue.cpp  rmqt_fieldvalue.h  rmqt_future.cpp  rmqt_future.h  rmqt_message.cpp  rmqt_message.h  rmqt_mutualsecurityparameters.cpp  rmqt_mutualsecurityparameters.h  rmqt_properties.cpp  (+27 more)
src/rmqtestmocks/: CMakeLists.txt  rmqtestmocks_mockconnection.cpp  rmqtestmocks_mockconnection.h  rmqtestmocks_mockconsumer.cpp  rmqtestmocks_mockconsumer.h  rmqtestmocks_mockmessageguard.cpp  rmqtestmocks_mockmessageguard.h  rmqtestmocks_mockproducer.cpp  rmqtestmocks_mockproducer.h  rmqtestmocks_mockrabbitcontext.cpp  rmqtestmocks_mockrabbitcontext.h  rmqtestmocks_mockvhost.cpp  rmqtestmocks_mockvhost.h
src/tests/: CMakeLists.txt
(+742 files in other folders)
