add_library(rmqamqpt OBJECT
    rmqamqpt_basicack.cpp
    rmqamqpt_basiccancel.cpp
    rmqamqpt_basiccancelok.cpp
    rmqamqpt_basicconsume.cpp
    rmqamqpt_basicconsumeok.cpp
    rmqamqpt_basicdeliver.cpp
    rmqamqpt_basicmethod.cpp
    rmqamqpt_basicnack.cpp
    rmqamqpt_basicproperties.cpp
    rmqamqpt_basicpublish.cpp
    rmqamqpt_basicqos.cpp
    rmqamqpt_basicqosok.cpp
    rmqamqpt_basicreturn.cpp
    rmqamqpt_buffer.cpp
    rmqamqpt_channelclose.cpp
    rmqamqpt_channelcloseok.cpp
    rmqamqpt_channelflow.cpp
    rmqamqpt_channelflowok.cpp
    rmqamqpt_channelmethod.cpp
    rmqamqpt_channelopen.cpp
    rmqamqpt_channelopenok.cpp
    rmqamqpt_confirmmethod.cpp
    rmqamqpt_confirmselect.cpp
    rmqamqpt_confirmselectok.cpp
    rmqamqpt_connectionclose.cpp
    rmqamqpt_connectioncloseok.cpp
    rmqamqpt_connectionmethod.cpp
    rmqamqpt_connectionopen.cpp
    rmqamqpt_connectionopenok.cpp
    rmqamqpt_connectionstart.cpp
    rmqamqpt_connectionstartok.cpp
    rmqamqpt_connectiontune.cpp
    rmqamqpt_connectiontuneok.cpp
    rmqamqpt_constants.cpp
    rmqamqpt_contentbody.cpp
    rmqamqpt_contentheader.cpp
    rmqamqpt_exchangebind.cpp
    rmqamqpt_exchangebindok.cpp
    rmqamqpt_exchangedeclare.cpp
    rmqamqpt_exchangedeclareok.cpp
    rmqamqpt_exchangemethod.cpp
    rmqamqpt_fieldvalue.cpp
    rmqamqpt_heartbeat.cpp
    rmqamqpt_frame.cpp
    rmqamqpt_method.cpp
    rmqamqpt_queuebind.cpp
    rmqamqpt_queueunbind.cpp
    rmqamqpt_queuebindok.cpp
    rmqamqpt_queueunbindok.cpp
    rmqamqpt_queuedeclare.cpp
    rmqamqpt_queuedeclareok.cpp
    rmqamqpt_queuedelete.cpp
    rmqamqpt_queuedeleteok.cpp
    rmqamqpt_queuemethod.cpp
    rmqamqpt_types.cpp)


target_link_libraries(rmqamqpt PUBLIC
    bsl
    bdl
    bal
    rmqt
)
target_include_directories(rmqamqpt PUBLIC .)
